projects/gateway2/translator/testutils/outputs/http-with-lambda-destination-proxy.yaml
listeners:
- aggregateListener:
    httpFilterChains:
    - matcher: {}
      virtualHostRefs:
      - http~example_com
    httpResources:
      virtualHosts:
        http~example_com:
          domains:
          - example.com
          name: http~example_com
          routes:
          - matchers:
            - prefix: /
            options: {}
            name: example-route-default-15155284599680667142-0
            routeAction:
              single:
                destinationSpec:
                  aws:
                    logicalName: uppercase
                upstream:
                  name: aws-upstream
                  namespace: default
  bindAddress: '::'
  bindPort: 8080
  name: http
metadata:
  labels:
    created_by: gloo-kube-gateway-api
    gateway_namespace: default
  name: default-gw
  namespace: gloo-system
