projects/gateway2/translator/testutils/outputs/route-sort.yaml
---
listeners:
- aggregateListener:
    httpFilterChains:
    - matcher: {}
      virtualHostRefs:
      - http~example_com
    httpResources:
      virtualHosts:
        http~example_com:
          domains:
          - example.com
          name: http~example_com
          routes:
          - matchers:
            - exact: /a/1/2
            options: {}
            name: route-1-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - exact: /x/1/2
            options: {}
            name: route-2-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - exact: /a/1
            options: {}
            name: route-1-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - exact: /x/1
            options: {}
            name: route-2-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - regex: /a/.*
            options: {}
            name: route-1-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - regex: /b/c/.*
            options: {}
            name: route-1-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - regex: /x/.*
            options: {}
            name: route-2-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - regex: /x/y/.*
            options: {}
            name: route-2-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - prefix: /a/1
            options: {}
            name: route-1-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - prefix: /x/1
            options: {}
            name: route-2-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - prefix: /a
            options: {}
            name: route-1-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - prefix: /x
            options: {}
            name: route-2-infra-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
  bindAddress: '::'
  bindPort: 8080
  name: http
metadata:
  labels:
    created_by: gloo-kube-gateway-api
    gateway_namespace: infra
  name: infra-example-gateway
  namespace: gloo-system
